--- a/app/src/main/res/layout/activity_cheese_details.xml
+++ b/app/src/main/res/layout/activity_cheese_details.xml
@@ -44,4 +44,13 @@
         android:layout_marginBottom="@dimen/margin_normal"
         app:layoutManager="android.support.v7.widget.LinearLayoutManager"
         app:layout_behavior="@string/appbar_scrolling_view_behavior"/>
+    <android.support.design.widget.FloatingActionButton
+        android:id="@+id/fab"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="bottom|end"
+        android:layout_marginEnd="@dimen/margin_double"
+        android:layout_marginBottom="@dimen/margin_double"
+        app:fabSize="normal"
+        android:src="@drawable/ic_done"/>
 </android.support.design.widget.CoordinatorLayout>
