--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -4,4 +4,6 @@
     <dimen name="activity_vertical_margin">16dp</dimen>
     <dimen name="margin_normal">8dp</dimen>
     <dimen name="margin_double">16dp</dimen>
+    <dimen name="margin_quadruple">32dp</dimen>
+    <dimen name="margin_large">64dp</dimen>
 </resources>
